# cadquery-pydantic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/cadquery_pydantic/: __init__.py  assembly.py  geom.py  shapes.py  sketch.py  workplane.py
tests/: conftest.py  test_assembly.py  test_context.py  test_geom.py  test_shapes.py  test_sketch.py  test_workplane.py
