[project]
name = "cadquery-pydantic"
version = "0.1.0"
description = "Monkey-patch for CadQuery to add Pydantic support"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "cadquery>=2.1",
    "pydantic>=2.4.2",
    "pydantic-core>=2.33.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cadquery_pydantic"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]
